# ldr

./: .gitignore  .gitmodules  Makefile  README.md
backend/: .env.example  pyproject.toml  server.py
backend/src/: .env  .env.example  ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: .env  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/auth/: AuthenticationPage.tsx  Clerk.tsx
frontend/src/challenge/: ChallengeGenerator.tsx  MCQChallenge.tsx  type.ts
frontend/src/history/: HistoryPanel.tsx
frontend/src/layout/: Layout.tsx
frontend/src/utils/: api.ts
